[package]
name = "spider-ggg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spider-core = { path = "../spider-core" }
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
serde = { version = "1.0.147", features = ["derive"] }
pbr = "1.0.4"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
reqwest = "0.11.12"
nipper = "0.1.9"
